# longjs

./: CMakeLists.txt  README.md  global.js  math.min.js  test.js  test_module.js  vcpkg.json
engine/: app.cpp  app_timer.cpp  function.hpp
fs/: fs.hpp
include/binder/: cppbinder.hpp  glbinder.hpp  glfwbinder.hpp  glfwobject.hpp
include/engine/: app.hpp  app_timer.hpp  environment.hpp  function.hpp  jsobject.cpp  jsobject.hpp  module.hpp  workspace.hpp
include/helper/: rapidhelper.hpp  v8helper.hpp
include/pattern/: singleton.hpp
include/pattern/noncopyable/: noncopyable.hpp
include/uuid/: UuidGenerator.h
src/: main.cpp
src/binder/: cppbinder.cpp  glbinder.cpp  glfwbinder.cpp  glfwobject.cpp
src/engine/: app.cpp  app_timer.cpp  environment.cpp  jsobject.cpp  module.cpp  workspace.cpp
src/fs/: fs.cpp
src/pattern/: singleton.cpp
src/uuid/: UuidGenerator.cpp  uuid_4.cpp
